Fix tag styling on mobile devices
Make tags smaller and less bold on mobile by reducing padding, font size, and font weight for better mobile experience.

--- a/_assets/stylesheets/modules/_tags.scss
+++ b/_assets/stylesheets/modules/_tags.scss
@@ -55,3 +55,19 @@
   color: $base-font-color;
   opacity: 0.7;
 }
+
+@include breakpoint(small) {
+  .tag-list-item {
+    a {
+      padding: 6px 12px;
+      padding-right: 24px;
+      font-size: 0.85em;
+      font-weight: 400;
+    }
+  }
+
+  .tag-count {
+    font-size: 0.7em;
+    font-weight: 600;
+  }
+}
